// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders col with children 1`] = `
<div
  className="col col-xs-auto"
>
  <p>
    Test
  </p>
</div>
`;

exports[`renders col with children and className 1`] = `
<div
  className="col col-xs-auto col-first"
>
  <p>
    Test
  </p>
</div>
`;

exports[`renders col with complex size 1`] = `
<div
  className="col col-xs-w36 col-sm-w18 col-lg-none col-xl-none"
/>
`;

exports[`renders col with number size 1`] = `
<div
  className="col col-xs-w36"
/>
`;

exports[`renders col with props 1`] = `
<div
  className="col col-xs-auto"
/>
`;

exports[`renders col with string size 1`] = `
<div
  className="col col-xs-w36"
/>
`;

exports[`renders col with string size 2`] = `
<div
  className="col col-xs-w12"
/>
`;

exports[`renders col with string size 3`] = `
<div
  className="col col-xs-none"
/>
`;

exports[`renders empty col 1`] = `
<div
  className="col col-xs-auto"
/>
`;
